<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.doanjava.nhantam.petmine.view.main.MainActivity">

    <!-- Toolbar 1 -->


    <!-- Main 8 -->
    <FrameLayout
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </FrameLayout>


    <!-- Navigation Bottom -->
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <android.support.v7.widget.CardView
            android:layout_gravity="bottom"
            app:cardCornerRadius="@dimen/dp5"
            app:cardElevation="@dimen/dp10"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:weightSum="5"
                android:orientation="horizontal"
                android:background="@color/color_status_black"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!-- New feed -->
                <FrameLayout
                    android:id="@+id/layoutNewfeed"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_marginTop="@dimen/dp10"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_newfeed_active_2"
                        android:layout_width="@dimen/dp20"
                        android:layout_height="@dimen/dp20" />
                    <com.doanjava.nhantam.petmine.customView.PMTextView
                        android:layout_marginBottom="@dimen/dp5"
                        app:fontTypeFaceName="Lato-Regular.ttf"
                        android:textSize="@dimen/sp12"
                        android:textColor="@color/color_white"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/new_feed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </FrameLayout>
                <!-- Near By -->
                <FrameLayout
                    android:id="@+id/layoutNearBy"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_marginTop="@dimen/dp10"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_nearby_unactive"
                        android:layout_width="@dimen/dp20"
                        android:layout_height="@dimen/dp20" />
                    <com.doanjava.nhantam.petmine.customView.PMTextView
                        android:layout_marginBottom="@dimen/dp5"
                        app:fontTypeFaceName="Lato-Regular.ttf"
                        android:textSize="@dimen/sp12"
                        android:textColor="@color/color_white"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/near_by"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </FrameLayout>
                <!-- Center -->
                <FrameLayout
                    android:id="@+id/layoutCenter"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_marginTop="@dimen/dp10"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_center_unactive"
                        android:layout_width="@dimen/dp20"
                        android:layout_height="@dimen/dp20" />
                    <com.doanjava.nhantam.petmine.customView.PMTextView
                        android:layout_marginBottom="@dimen/dp5"
                        app:fontTypeFaceName="Lato-Regular.ttf"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/sp12"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </FrameLayout>
                <!-- Notification -->
                <FrameLayout
                    android:id="@+id/layoutNotification"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_marginLeft="@dimen/dp15"
                        android:layout_gravity="center_horizontal"
                        android:textSize="10sp"
                        android:gravity="center"
                        android:text="1"
                        android:textColor="@color/color_white"
                        android:background="@drawable/bg_notification"
                        android:layout_width="@dimen/dp15"
                        android:layout_height="@dimen/dp15" />
                    <ImageView
                        android:layout_marginTop="@dimen/dp10"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_notification_unactive"
                        android:layout_width="@dimen/dp20"
                        android:layout_height="@dimen/dp20" />
                    <com.doanjava.nhantam.petmine.customView.PMTextView
                        android:layout_marginBottom="@dimen/dp5"
                        app:fontTypeFaceName="Lato-Regular.ttf"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/sp12"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </FrameLayout>
                <!-- More -->
                <FrameLayout
                    android:id="@+id/layoutMore"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_marginTop="@dimen/dp10"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_more_unactive"
                        android:layout_width="@dimen/dp20"
                        android:layout_height="@dimen/dp20" />
                    <com.doanjava.nhantam.petmine.customView.PMTextView
                        android:layout_marginBottom="@dimen/dp5"
                        app:fontTypeFaceName="Lato-Regular.ttf"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/sp12"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </FrameLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>
</LinearLayout>
